--- a/homework.ipynb
+++ b/homework.ipynb
@@ -534,14 +534,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 106,
    "metadata": {
     "id": "qLQyPsen5ExP"
    },
    "outputs": [],
    "source": [
     "# Find median of rated_flavor column\n",
-    "p5 = mango_data['rated_flavor'].median()"
+    "p5 = mango_data['estimated_flavor'].median()"
    ]
   },
   {
@@ -553,16 +553,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.float64(1.5)"
+       "np.float64(2.0)"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "metadata": {
     "id": "0R8DkzA7bEJQ"
    },
@@ -746,7 +746,7 @@
     "# 2. x^4\n",
     "# 3. x^2 - 9x (second derivative = 2)\n",
     "# 4. 0.001x^2\n",
-    "p7 = 4"
+    "p7 = 5"
    ]
   },
   {
